[package]
name = "narwhal"
version = "0.6.1"
description = "A docker remote API library, supporting TCP, TLS and Unix backends"
authors = ["Cameron Diver <cameron@resin.io>"]
license = "Apache-2.0"

[dependencies]
serde = "1.0.13"
serde_json = "1.0.13"
serde_derive = "1.0"
error-chain = "0.11.0"
regex = "0.2.10"
lazy_static = "1.0.0"
openssl = "0.10.5"
url = "1.7.0"
